samples/_failures_safe/1761335517_1dc283_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_60fc2e61.c: In function ‘main’:
./samples/SAFE/__tmp_60fc2e61.c:155:13: error: expected identifier or ‘(’ at end of input
  155 |             int
      |             ^~~
./samples/SAFE/__tmp_60fc2e61.c:155:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_60fc2e61.c:155:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_60fc2e61.c:155:13: error: expected declaration or statement at end of input
